# approximate-medians

./: .gitignore  CMakeLists.txt  README.md  mom.py
.github/: build.yaml
.github/workflows/: blank.yml  build.yml
VHDL/: mom25_v2.vhd  mom9_v2.vhd  s_11_1.vhd  s_11_10.vhd  s_11_2.vhd  s_11_3.vhd  s_11_4.vhd  s_11_5.vhd  s_11_6.vhd  s_11_7.vhd  s_11_8.vhd  s_11_9.vhd  s_11_init.vhd  s_11_new_init.vhd  s_13_1.vhd  s_13_10.vhd  s_13_2.vhd  s_13_3.vhd  s_13_4.vhd  s_13_5.vhd  s_13_6.vhd  s_13_7.vhd  s_13_8.vhd  s_13_9.vhd  s_13_init.vhd  s_13_new_init.vhd  s_15_1.vhd  s_15_10.vhd  s_15_2.vhd  s_15_3.vhd  s_15_4.vhd  s_15_5.vhd  s_15_6.vhd  s_15_7.vhd  s_15_8.vhd  s_15_9.vhd  s_15_init.vhd  s_15_new_init.vhd  s_19_1.vhd  s_19_10.vhd  (+31 more)
buddy/: CMakeLists.txt  configure
buddy/src/: config.h
netlist/: m03.cha  m05.cha  m09.cha  mom25_v2.cha  mom9_v2.cha  s_11_1.cha  s_11_10.cha  s_11_2.cha  s_11_3.cha  s_11_4.cha  s_11_5.cha  s_11_6.cha  s_11_7.cha  s_11_8.cha  s_11_9.cha  s_13_1.cha  s_13_10.cha  s_13_2.cha  s_13_3.cha  s_13_4.cha  s_13_5.cha  s_13_6.cha  s_13_7.cha  s_13_8.cha  s_13_9.cha  s_15_1.cha  s_15_10.cha  s_15_2.cha  s_15_3.cha  s_15_4.cha  s_15_5.cha  s_15_6.cha  s_15_7.cha  s_15_8.cha  s_15_9.cha  s_19_1.cha  s_19_10.cha  s_19_2.cha  s_19_3.cha  s_19_4.cha  (+25 more)
src/: chromosome.h  chromosomear.cxx  chromosomear.h  fitnessbdd.cxx  fitnessbdd.h  main.cxx  reference.cxx  reference.h  vhdlconst.h
